Created endpoint to retrieve count of flags per team
