# openapi/api.yml
@@ -220,6 +220,58 @@ paths:
               schema:
                 type: object
                 $ref: 'components.yml#/components/schemas/AssessmentsStats'
+  '/assessments/get-team-flag-stats/{fund_id}/{round_id}':
+    parameters:
+      - name: fund_id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: path
+      - name: round_id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: path
+      - name: search_term
+        in: query
+        style: form
+        schema:
+          type: string
+          format: query
+        required: false
+        explode: true
+      - name: asset_type
+        in: query
+        style: form
+        schema:
+          type: string
+          format: query
+        required: false
+        explode: true
+      - name: status
+        in: query
+        style: form
+        schema:
+          type: string
+          format: query
+        required: false
+        explode: true
+    get:
+      tags:
+        - assessments
+      summary: Get team flagging stats
+      description: Get a selection of required metrics
+      operationId: api.routes.get_team_flag_stats
+      responses:
+        200:
+          description: SUCCESS - A collection of assessment metrics
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: 'components.yml#/components/schemas/TeamFlagStats'
   '/score':
     get:
       tags:
